dolphinscheduler-task-plugin/dolphinscheduler-task-api/src/main/java/org/apache/dolphinscheduler/plugin/task/api/parser/dependent/generate/TimeCalculateParser.java
package org.apache.dolphinscheduler.plugin.task.api.parser.dependent.generate;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TimeCalculateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, COLON=2, LEFT_PAREN=3, RIGHT_PAREN=4, C=5, E=6, Y=7, UPPER_M=8, 
		W=9, D=10, H=11, LOWER_M=12, S=13, WOY=14, DOW=15, DOY=16, EQ=17, NEQ=18, 
		NEQJ=19, LT=20, LTE=21, GT=22, GTE=23, PLUS=24, MINUS=25, ASTERISK=26, 
		SLASH=27, MOD=28, FDIV=29, EXPONAL=30, LPAPED_TWO_DIGIT=31, TWO_INTEGER=32, 
		ZERO=33, ONE_TO_NINE=34, WS=35;
	public static final int
		RULE_timeCalc = 0, RULE_dateTime = 1, RULE_abbrDate = 2, RULE_fullDate = 3, 
		RULE_timeInit = 4, RULE_time = 5, RULE_yearValue = 6, RULE_fourDigit = 7, 
		RULE_monthValue = 8, RULE_dayValue = 9, RULE_hourValue = 10, RULE_minuteValue = 11, 
		RULE_secondValue = 12, RULE_twoDigit = 13, RULE_interval = 14, RULE_firstIntervalField = 15, 
		RULE_intervalField = 16, RULE_intervalSign = 17, RULE_intervalValue = 18, 
		RULE_refVar = 19, RULE_integerValue = 20, RULE_expr = 21, RULE_comparisonOperator = 22, 
		RULE_intervalUnit = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"timeCalc", "dateTime", "abbrDate", "fullDate", "timeInit", "time", "yearValue", 
			"fourDigit", "monthValue", "dayValue", "hourValue", "minuteValue", "secondValue", 
			"twoDigit", "interval", "firstIntervalField", "intervalField", "intervalSign", 
			"intervalValue", "refVar", "integerValue", "expr", "comparisonOperator", 
			"intervalUnit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "':'", "'('", "')'", "'C'", "'E'", "'Y'", null, "'W'", "'D'", 
			"'H'", null, "'S'", "'WOY'", "'DOW'", "'DOY'", null, "'<>'", "'!='", 
			"'<'", null, "'>'", null, "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", 
			"'**'", null, null, "'0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOT", "COLON", "LEFT_PAREN", "RIGHT_PAREN", "C", "E", "Y", "UPPER_M", 
			"W", "D", "H", "LOWER_M", "S", "WOY", "DOW", "DOY", "EQ", "NEQ", "NEQJ", 
			"LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "ASTERISK", "SLASH", "MOD", 
			"FDIV", "EXPONAL", "LPAPED_TWO_DIGIT", "TWO_INTEGER", "ZERO", "ONE_TO_NINE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TimeCalculateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TimeCalculateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TimeCalcContext extends ParserRuleContext {
		public DateTimeContext dateTime() {
			return getRuleContext(DateTimeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TimeCalculateParser.EOF, 0); }
		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class,0);
		}
		public TimeCalcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeCalc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterTimeCalc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitTimeCalc(this);
		}
	}

	public final TimeCalcContext timeCalc() throws RecognitionException {
		TimeCalcContext _localctx = new TimeCalcContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_timeCalc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			dateTime();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(49);
				interval();
				}
			}

			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateTimeContext extends ParserRuleContext {
		public AbbrDateContext abbrDate() {
			return getRuleContext(AbbrDateContext.class,0);
		}
		public TimeInitContext timeInit() {
			return getRuleContext(TimeInitContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public FullDateContext fullDate() {
			return getRuleContext(FullDateContext.class,0);
		}
		public DateTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dateTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterDateTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitDateTime(this);
		}
	}

	public final DateTimeContext dateTime() throws RecognitionException {
		DateTimeContext _localctx = new DateTimeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dateTime);
		int _la;
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				abbrDate();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				abbrDate();
				setState(56);
				timeInit();
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLON) | (1L << H) | (1L << LPAPED_TWO_DIGIT) | (1L << TWO_INTEGER))) != 0)) {
					{
					setState(57);
					time();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(60);
					fullDate();
					}
					break;
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOT) | (1L << C) | (1L << E) | (1L << S))) != 0)) {
					{
					setState(63);
					timeInit();
					}
				}

				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLON) | (1L << H) | (1L << LPAPED_TWO_DIGIT) | (1L << TWO_INTEGER))) != 0)) {
					{
					setState(66);
					time();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbbrDateContext extends ParserRuleContext {
		public YearValueContext yearValue() {
			return getRuleContext(YearValueContext.class,0);
		}
		public MonthValueContext monthValue() {
			return getRuleContext(MonthValueContext.class,0);
		}
		public AbbrDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abbrDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterAbbrDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitAbbrDate(this);
		}
	}

	public final AbbrDateContext abbrDate() throws RecognitionException {
		AbbrDateContext _localctx = new AbbrDateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_abbrDate);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				yearValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				yearValue();
				setState(73);
				monthValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FullDateContext extends ParserRuleContext {
		public YearValueContext yearValue() {
			return getRuleContext(YearValueContext.class,0);
		}
		public MonthValueContext monthValue() {
			return getRuleContext(MonthValueContext.class,0);
		}
		public DayValueContext dayValue() {
			return getRuleContext(DayValueContext.class,0);
		}
		public FullDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterFullDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitFullDate(this);
		}
	}

	public final FullDateContext fullDate() throws RecognitionException {
		FullDateContext _localctx = new FullDateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fullDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			yearValue();
			setState(78);
			monthValue();
			setState(79);
			dayValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeInitContext extends ParserRuleContext {
		public TerminalNode C() { return getToken(TimeCalculateParser.C, 0); }
		public TerminalNode S() { return getToken(TimeCalculateParser.S, 0); }
		public TerminalNode E() { return getToken(TimeCalculateParser.E, 0); }
		public TerminalNode DOT() { return getToken(TimeCalculateParser.DOT, 0); }
		public TimeInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterTimeInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitTimeInit(this);
		}
	}

	public final TimeInitContext timeInit() throws RecognitionException {
		TimeInitContext _localctx = new TimeInitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_timeInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOT) | (1L << C) | (1L << E) | (1L << S))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public HourValueContext hourValue() {
			return getRuleContext(HourValueContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(TimeCalculateParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(TimeCalculateParser.COLON, i);
		}
		public MinuteValueContext minuteValue() {
			return getRuleContext(MinuteValueContext.class,0);
		}
		public SecondValueContext secondValue() {
			return getRuleContext(SecondValueContext.class,0);
		}
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitTime(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_time);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				hourValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << H) | (1L << LPAPED_TWO_DIGIT) | (1L << TWO_INTEGER))) != 0)) {
					{
					setState(84);
					hourValue();
					}
				}

				setState(87);
				match(COLON);
				setState(88);
				minuteValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << H) | (1L << LPAPED_TWO_DIGIT) | (1L << TWO_INTEGER))) != 0)) {
					{
					setState(89);
					hourValue();
					}
				}

				setState(92);
				match(COLON);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOWER_M) | (1L << LPAPED_TWO_DIGIT) | (1L << TWO_INTEGER))) != 0)) {
					{
					setState(93);
					minuteValue();
					}
				}

				setState(96);
				match(COLON);
				setState(97);
				secondValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YearValueContext extends ParserRuleContext {
		public FourDigitContext fourDigit() {
			return getRuleContext(FourDigitContext.class,0);
		}
		public TerminalNode Y() { return getToken(TimeCalculateParser.Y, 0); }
		public YearValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yearValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterYearValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitYearValue(this);
		}
	}

	public final YearValueContext yearValue() throws RecognitionException {
		YearValueContext _localctx = new YearValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_yearValue);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				fourDigit();
				}
				break;
			case Y:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(Y);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FourDigitContext extends ParserRuleContext {
		public TerminalNode TWO_INTEGER() { return getToken(TimeCalculateParser.TWO_INTEGER, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public FourDigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fourDigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterFourDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitFourDigit(this);
		}
	}

	public final FourDigitContext fourDigit() throws RecognitionException {
		FourDigitContext _localctx = new FourDigitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fourDigit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TWO_INTEGER);
			setState(105);
			twoDigit();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonthValueContext extends ParserRuleContext {
		public TerminalNode UPPER_M() { return getToken(TimeCalculateParser.UPPER_M, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public MonthValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monthValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterMonthValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitMonthValue(this);
		}
	}

	public final MonthValueContext monthValue() throws RecognitionException {
		MonthValueContext _localctx = new MonthValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_monthValue);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UPPER_M:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(UPPER_M);
				}
				break;
			case LPAPED_TWO_DIGIT:
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				twoDigit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DayValueContext extends ParserRuleContext {
		public TerminalNode D() { return getToken(TimeCalculateParser.D, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public DayValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterDayValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitDayValue(this);
		}
	}

	public final DayValueContext dayValue() throws RecognitionException {
		DayValueContext _localctx = new DayValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dayValue);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case D:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(D);
				}
				break;
			case LPAPED_TWO_DIGIT:
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				twoDigit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HourValueContext extends ParserRuleContext {
		public TerminalNode H() { return getToken(TimeCalculateParser.H, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public HourValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hourValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterHourValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitHourValue(this);
		}
	}

	public final HourValueContext hourValue() throws RecognitionException {
		HourValueContext _localctx = new HourValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hourValue);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case H:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(H);
				}
				break;
			case LPAPED_TWO_DIGIT:
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				twoDigit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MinuteValueContext extends ParserRuleContext {
		public TerminalNode LOWER_M() { return getToken(TimeCalculateParser.LOWER_M, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public MinuteValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minuteValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterMinuteValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitMinuteValue(this);
		}
	}

	public final MinuteValueContext minuteValue() throws RecognitionException {
		MinuteValueContext _localctx = new MinuteValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_minuteValue);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOWER_M:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(LOWER_M);
				}
				break;
			case LPAPED_TWO_DIGIT:
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				twoDigit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SecondValueContext extends ParserRuleContext {
		public TerminalNode S() { return getToken(TimeCalculateParser.S, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public SecondValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterSecondValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitSecondValue(this);
		}
	}

	public final SecondValueContext secondValue() throws RecognitionException {
		SecondValueContext _localctx = new SecondValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_secondValue);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case S:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(S);
				}
				break;
			case LPAPED_TWO_DIGIT:
			case TWO_INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				twoDigit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TwoDigitContext extends ParserRuleContext {
		public TerminalNode LPAPED_TWO_DIGIT() { return getToken(TimeCalculateParser.LPAPED_TWO_DIGIT, 0); }
		public TerminalNode TWO_INTEGER() { return getToken(TimeCalculateParser.TWO_INTEGER, 0); }
		public TwoDigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_twoDigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterTwoDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitTwoDigit(this);
		}
	}

	public final TwoDigitContext twoDigit() throws RecognitionException {
		TwoDigitContext _localctx = new TwoDigitContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_twoDigit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==LPAPED_TWO_DIGIT || _la==TWO_INTEGER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalContext extends ParserRuleContext {
		public IntervalSignContext intervalSign() {
			return getRuleContext(IntervalSignContext.class,0);
		}
		public FirstIntervalFieldContext firstIntervalField() {
			return getRuleContext(FirstIntervalFieldContext.class,0);
		}
		public List<IntervalFieldContext> intervalField() {
			return getRuleContexts(IntervalFieldContext.class);
		}
		public IntervalFieldContext intervalField(int i) {
			return getRuleContext(IntervalFieldContext.class,i);
		}
		public IntegerValueContext integerValue() {
			return getRuleContext(IntegerValueContext.class,0);
		}
		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).enterInterval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeCalculateParserListener ) ((TimeCalculateParserListener)listener).exitInterval(this);
		}
	}
